--- a/test2/Views/ChangePasswordWindow.xaml
+++ b/test2/Views/ChangePasswordWindow.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="test2.Views.MainWindow"
+﻿<Window x:Class="test2.Views.ChangePasswordWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:test2.Views" xmlns:helpers="clr-namespace:test2.Helpers"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
+        xmlns:local="clr-namespace:test2.Views"  xmlns:helpers="clr-namespace:test2.Helpers" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ChangePasswordViewModel}"
         mc:Ignorable="d"
-        Title="Login" Height="450" Width="800" MinHeight="200" MinWidth="300">
+        Title="Change Password" Height="450" Width="800" MinHeight="180" MinWidth="300">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
- BorderThickness="1"
- Opacity="0.75">
+BorderThickness="1"
+Opacity="0.75">
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
                     <GradientStop Color="#2946AA" Offset="0"/>
@@ -30,12 +29,11 @@
             </Border.Background>
             <Grid>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock TextWrapping="Wrap" Text="Username"/>
-                    <TextBox Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
-                    <TextBlock TextWrapping="Wrap" Text="Password"/>
-                    <PasswordBox Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
-                    <Button Content="Login" Command="{Binding LoginCommand}" Width="200"  Margin="0,0,0,10"/>
-                    <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
+                    <TextBlock TextWrapping="Wrap" Text="New Password (Required)"/>
+                    <PasswordBox x:Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Confirm new password (Required)"/>
+                    <PasswordBox x:Name="ConfirmPasswordBox" helpers:PasswordHelper.Attach="True" helpers:PasswordHelper.Password="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+                    <Button Content="Change Passwod" Command="{Binding ChangePasswordCommand}" Width="200" />
                 </StackPanel>
             </Grid>
         </Border>
