--- a/test2/Views/EmployeeWindow.xaml
+++ b/test2/Views/EmployeeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:EmployeeViewModel}"
         mc:Ignorable="d"
-        Title="EmployeeWindow" Height="450" Width="800">
+        Title="Employee Window" Height="450" Width="800" MinHeight="180" MinWidth="300">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
 BorderThickness="1"
@@ -31,6 +31,7 @@ Opacity="0.75">
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
                     <Button Content="Projects"  Command="{Binding ProjectsCommand}" Width="200" />
                     <Button Content="Leave Requests" Command="{Binding LeaveRequestsCommand}" Width="200"/>
+                    <Button Content="Change password" Command="{Binding ChangePasswordCommand}" Width="200"/>
                     <Button Content="Log out" Command="{Binding LogoutCommand}" Width="200"/>
                 </StackPanel>
             </Grid>
