--- a/test2/Views/ApprovalRequestsWindow.xaml
+++ b/test2/Views/ApprovalRequestsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ApprovalRequestsViewModel}"
         mc:Ignorable="d" xmlns:behaviors="clr-namespace:test2.Behaviors"
-        Title="ApprovalRequestsWindow" Height="750" Width="800">
+        Title="Approval Requests" Height="750" Width="800" MinHeight="750" MinWidth="800">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
 BorderThickness="1"
@@ -28,7 +28,13 @@ Opacity="0.75">
                 </LinearGradientBrush>
             </Border.Background>
             <Grid>
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="675">
+                <Grid.RowDefinitions>
+
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+
+                </Grid.RowDefinitions>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="564">
                     <TextBlock TextWrapping="Wrap" Text="Id"/>
                     <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
                     <TextBlock TextWrapping="Wrap" Text="Approver"/>
@@ -39,29 +45,30 @@ Opacity="0.75">
                     <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
                     <TextBlock TextWrapping="Wrap" Text="Comment"/>
                     <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-                    <Button Content="Filter" Command="{Binding FilterCommand}" Width="200" HorizontalAlignment="Left"/>
+                    <Button Content="Filter/Refresh" Command="{Binding FilterCommand}" Width="200" HorizontalAlignment="Left"/>
 
-
-                    <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                        <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
   CanUserAddRows="True" CanUserDeleteRows="True"
   CanUserSortColumns="True" IsReadOnly="True"
   SelectionMode="Single" ItemsSource="{Binding FilteredApprovalRequests}" 
-          SelectedItem="{Binding SelectedApprovalRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Approver" Binding="{Binding Approver}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Leave Request" Binding="{Binding LeaveRequestt}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
+          SelectedItem="{Binding SelectedApprovalRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}" Height="322">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Approver" Binding="{Binding Approver}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Leave Request" Binding="{Binding LeaveRequestt}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
 
-                        </DataGrid.Columns>
-                        <DataGrid.RowStyle>
-                            <Style TargetType="DataGridRow">
-                                <Setter Property="Focusable" Value="True" />
-                                <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
-                            </Style>
-                        </DataGrid.RowStyle>
-                    </DataGrid>
+                            </DataGrid.Columns>
+                            <DataGrid.RowStyle>
+                                <Style TargetType="DataGridRow">
+                                    <Setter Property="Focusable" Value="True" />
+                                    <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                                </Style>
+                            </DataGrid.RowStyle>
+                        </DataGrid>
+                    </ScrollViewer>
                 </StackPanel>
             </Grid>
         </Border>
