--- a/test2/Views/EditLeaveRequestWindow.xaml
+++ b/test2/Views/EditLeaveRequestWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:converter="clr-namespace:test2.Converters" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:EditLeaveRequestViewModel}"
         mc:Ignorable="d"
-        Title="EditLeaveRequestWindow" Height="450" Width="800">
+        Title="Leave Request" Height="450" Width="800" MinHeight="450" MinWidth="400">
     <Window.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
