--- a/test2/Views/EditProjectWindow.xaml
+++ b/test2/Views/EditProjectWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:EditProjectViewModel}"
         mc:Ignorable="d"
-        Title="EditProjectWindow" Height="450" Width="800">
+        Title="Project" Height="450" Width="800" MinHeight="450" MinWidth="400">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
   BorderThickness="1"
