--- a/test2/Views/LeaveRequestsWindow.xaml
+++ b/test2/Views/LeaveRequestsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LeaveRequestsViewModel}"
         mc:Ignorable="d" xmlns:behaviors="clr-namespace:test2.Behaviors"
-        Title="LeaveRequestsWindow" Height="750" Width="800">
+        Title="Leave Requests" Height="750" Width="800" MinHeight="750" MinWidth="800">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
 BorderThickness="1"
@@ -28,6 +28,12 @@ Opacity="0.75">
                 </LinearGradientBrush>
             </Border.Background>
             <Grid>
+                <Grid.RowDefinitions>
+
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+
+                </Grid.RowDefinitions>
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="675">
                     <TextBlock TextWrapping="Wrap" Text="Id"/>
                     <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
@@ -43,30 +49,31 @@ Opacity="0.75">
                     <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
                     <TextBlock TextWrapping="Wrap" Text="Status"/>
                     <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-                    <Button Content="Filter" Width="200"  Command="{Binding FilterCommand}" HorizontalAlignment="Left"/>
+                    <Button Content="Filter/Refresh" Width="200"  Command="{Binding FilterCommand}" HorizontalAlignment="Left"/>
                     <Button Content="New Leave Request" Width="200"  Command="{Binding NewLeaveRequestCommand}" HorizontalAlignment="Left"/>
-
-                    <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                        <DataGrid x:Name="ProjectDataGrid" AutoGenerateColumns="False" 
           CanUserAddRows="False" CanUserDeleteRows="False"
           CanUserSortColumns="True" IsReadOnly="True"
           SelectionMode="Single" ItemsSource="{Binding FilteredLeaveRequests}" 
-          SelectedItem="{Binding SelectedLeaveRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}">
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Employee" Binding="{Binding Employee}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Absence Reason" Binding="{Binding AbsenceReasonn}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate, StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="End Date" Binding="{Binding EndDate , StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
-                            <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
-                        </DataGrid.Columns>
-                        <DataGrid.RowStyle>
-                            <Style TargetType="DataGridRow">
-                                <Setter Property="Focusable" Value="True" />
-                                <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
-                            </Style>
-                        </DataGrid.RowStyle>
-                    </DataGrid>
+          SelectedItem="{Binding SelectedLeaveRequest, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}" Height="328">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Employee" Binding="{Binding Employee}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Absence Reason" Binding="{Binding AbsenceReasonn}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate, StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="End Date" Binding="{Binding EndDate , StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" IsReadOnly="False"/>
+                                <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
+                            </DataGrid.Columns>
+                            <DataGrid.RowStyle>
+                                <Style TargetType="DataGridRow">
+                                    <Setter Property="Focusable" Value="True" />
+                                    <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                                </Style>
+                            </DataGrid.RowStyle>
+                        </DataGrid>
+                    </ScrollViewer>
                 </StackPanel>
             </Grid>
         </Border>
