--- a/test2/Views/NewLeaveRequestWindow.xaml
+++ b/test2/Views/NewLeaveRequestWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:NewLeaveRequestViewModel}"
         mc:Ignorable="d"
-        Title="NewLeaveRequestWindow" Height="450" Width="800">
+        Title="New Leave Request" Height="450" Width="800" MinHeight="450" MinWidth="400">
     <Border CornerRadius="12">
         <Border CornerRadius="10"                     
 BorderThickness="1"
