--- a/test2/Views/OpenApprovalRequestWindow.xaml
+++ b/test2/Views/OpenApprovalRequestWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:converters="clr-namespace:test2.Converters" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:OpenApprovalRequestViewModel}"
         mc:Ignorable="d"
-        Title="Approval Request" Height="450" Width="800">
+        Title="Approval Request" Height="450" Width="800" MinHeight="450" MinWidth="400">
     <Window.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
