--- a/test2/Views/EditLeaveRequestWindow.xaml
+++ b/test2/Views/EditLeaveRequestWindow.xaml
@@ -48,9 +48,9 @@ HorizontalAlignment="Center"
 
                     </ComboBox>
                     <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
-                    <DatePicker Name="StartDate"  SelectedDate="{Binding StartDate}" />
+                    <DatePicker Name="StartDate" IsHitTestVisible="{Binding IsStartDatePickerReadOnly}"  SelectedDate="{Binding StartDate}" />
                     <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
-                    <DatePicker Name="EndDate" SelectedDate="{Binding EndDate}" />
+                    <DatePicker Name="EndDate" IsHitTestVisible="{Binding IsEndDatePickerReadOnly}" SelectedDate="{Binding EndDate}" />
                     <TextBlock TextWrapping="Wrap" Text="Comment"/>
                     <TextBox x:Name="CommentTextBox" IsReadOnly="{Binding IsTextBoxReadOnly}" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
                     <TextBlock TextWrapping="Wrap" Text="Status"/>
